--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
    "scripts": {
     "start": "node index.js",
+    "build": "node index.js",
     "dev": "nodemon app.js --ignore session --ext js,jsx,json",
     "test": "jest",
     "dbr": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all"
