--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.3",
-    "session-file-store": "^1.5.0"
-  },
-  "devDependencies": {
+    "session-file-store": "^1.5.0",
     "nodemon": "^2.0.21",
     "sequelize-cli": "^6.6.0"
   }
